@startuml CU05_Class
!include ../_shared/global_style.iuml

title CU-05 — Gestionar asignaciones: Diagrama de Clases

package "apps.curriculum.models.assignment_model" <<Entity>> {
    class Assignment <<Entity>> {
        + lesson: FK → learning.Lesson (CASCADE)
        + created_by: FK → LMSUser (SET_NULL)
        + title: CharField(max_length=255)
        + description: TextField
        + due_date: DateTimeField(null)
        + max_score: DecimalField(default=100)
        + created_at: DateTimeField(auto_now_add)
        + objects: SoftDeleteManager
        + all_objects: AllObjectsManager
    }
}

package "apps.curriculum.viewsets.assignment_viewset" <<Boundary>> {
    class AssignmentViewSet <<Boundary>> {
        + queryset: Assignment.objects.select_related(...)
        + serializer_class: AssignmentSerializer
        + filterset_fields: [lesson, created_by, is_deleted]
        --
        + get_permissions(): list
        + list(request): Response
        + retrieve(request): Response
        + create(request): Response
        + update(request): Response
        + partial_update(request): Response
        + destroy(request): Response
    }
}

package "apps.curriculum.serializers.assignment_serializer" <<Control>> {
    class AssignmentSerializer <<Control>> {
    }
}

package "core_lms.mixins" {
    class SoftDeleteMixin <<Entity>> {
        + is_deleted: BooleanField
        + deleted_at: DateTimeField
        --
        + delete(): None
    }
}

Assignment <|-- SoftDeleteMixin
AssignmentViewSet --> AssignmentSerializer : serializer_class
AssignmentViewSet ..> Assignment
Assignment ..> "Lesson" : lesson FK
Assignment ..> "LMSUser" : created_by FK

@enduml
